[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Maps/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Pet/Pet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Characters/NPC/Roi_Idle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/NPCs/King.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Passives/CavernDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Maps/Donjons/Tutoriel.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Interactives/levier.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Interactives/pressure_plate.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Interactives/LightingFirecamp.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Objects/bouton_2_off.png" type="Texture" id=11]
[ext_resource path="res://Assets/Objects/pressure_plate_off.png" type="Texture" id=12]
[ext_resource path="res://Assets/Objects/bouton_2_on.png" type="Texture" id=13]
[ext_resource path="res://Assets/Objects/pressure_plate_on.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/NPC/solution_giver_idle.png" type="Texture" id=15]
[ext_resource path="res://Scenes/NPCs/NPC.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Passives/Stairs.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Objects/escalier_pierre.png" type="Texture" id=18]

[node name="Tutomap" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -131073, -1073741783, 131073, -196608, 1073741864, 131072, -196607, 1073741864, 131073, -196606, 1073741864, 131073, -196605, 1073741864, 131073, -196604, 1073741864, 131073, -196603, 1073741864, 131073, -196602, 1073741864, 131073, -196601, 1073741864, 131073, -196600, 1073741864, 131074, -196599, -1610612695, 131073, -196595, -1073741783, 131073, -196594, 1073741864, 131072, -196593, 1073741864, 131073, -196592, 1073741864, 131073, -196591, 1073741864, 131073, -196590, 1073741864, 131073, -196589, 1073741864, 131073, -196588, 1073741864, 131073, -196587, 1073741864, 131073, -196586, 1073741864, 131074, -196585, -1610612695, 131073, -196581, -1073741783, 131073, -196580, 1073741864, 131072, -196579, 1073741864, 131073, -196578, 1073741864, 131073, -196577, 1073741864, 131073, -196576, 1073741864, 131073, -196575, 1073741864, 131073, -196574, 1073741864, 131073, -196573, 1073741864, 131073, -196572, 1073741864, 131074, -196571, -1610612695, 131073, -196567, -1073741783, 131073, -196566, 1073741864, 131072, -196565, 1073741864, 131073, -196564, 1073741864, 131073, -196563, 1073741864, 131073, -196562, 1073741864, 131073, -196561, 1073741864, 131073, -196560, 1073741864, 131073, -196559, 1073741864, 131073, -196558, 1073741864, 131073, -196557, 1073741864, 131074, -196556, -1610612695, 131073, -65537, -1073741783, 131073, -131072, 40, 65536, -131071, 40, 65537, -131070, 40, 65537, -131069, 40, 65537, -131068, 40, 65537, -131067, 40, 65537, -131066, 40, 65537, -131065, 40, 65537, -131064, 40, 65538, -131063, -1610612695, 131073, -131059, -1073741783, 131073, -131058, 40, 65536, -131057, 40, 65537, -131056, 40, 65537, -131055, 40, 65537, -131054, 40, 65537, -131053, 40, 65537, -131052, 40, 65537, -131051, 40, 65537, -131050, 40, 65538, -131049, -1610612695, 131073, -131045, -1073741783, 131073, -131044, 40, 65536, -131043, 40, 65537, -131042, 40, 65537, -131041, 40, 65537, -131040, 40, 65537, -131039, 40, 65537, -131038, 40, 65537, -131037, 40, 65537, -131036, 40, 65538, -131035, -1610612695, 131073, -131031, -1073741783, 131073, -131030, 40, 65536, -131029, 40, 65537, -131028, 40, 65537, -131027, 40, 65537, -131026, 40, 65537, -131025, 40, 65537, -131024, 40, 65537, -131023, 40, 65537, -131022, 40, 65537, -131021, 40, 65538, -131020, -1610612695, 131073, -1, -1073741783, 131073, -65536, 40, 131072, -65535, 40, 131073, -65534, 40, 131073, -65533, 40, 131073, -65532, 40, 131073, -65531, 40, 131073, -65530, 40, 131073, -65529, 40, 131073, -65528, 40, 131074, -65527, -1610612695, 131073, -65523, -1073741783, 131073, -65522, 40, 131072, -65521, 40, 131073, -65520, 40, 131073, -65519, 40, 131073, -65518, 40, 131073, -65517, 40, 131073, -65516, 40, 131073, -65515, 40, 131073, -65514, 40, 131074, -65513, -1610612695, 131073, -65509, -1073741783, 131073, -65508, 40, 131072, -65507, 40, 131073, -65506, 40, 131073, -65505, 40, 131073, -65504, 40, 131073, -65503, 40, 131073, -65502, 40, 131073, -65501, 40, 131073, -65500, 40, 131074, -65499, -1610612695, 131073, -65495, -1073741783, 131073, -65494, 40, 131072, -65493, 40, 131073, -65492, 40, 131073, -65491, 40, 131073, -65490, 40, 131073, -65489, 40, 131073, -65488, 40, 131073, -65487, 40, 131073, -65486, 40, 131073, -65485, 40, 131074, -65484, -1610612695, 131073, 65535, -1073741783, 131073, 0, 42, 0, 1, 42, 0, 2, 42, 0, 3, 42, 0, 4, 42, 0, 5, 42, 0, 6, 42, 0, 7, 42, 0, 8, 42, 0, 9, -1610612695, 131073, 13, -1073741783, 131073, 14, 42, 0, 15, 42, 0, 16, 42, 0, 17, 42, 0, 18, 42, 0, 19, 42, 0, 20, 42, 0, 21, 42, 0, 22, 42, 0, 23, -1610612695, 131073, 27, -1073741783, 131073, 28, 42, 0, 29, 42, 0, 30, 42, 0, 31, 42, 0, 32, 42, 0, 33, 42, 0, 34, 42, 0, 35, 42, 0, 36, 42, 0, 37, -1610612695, 131073, 41, -1073741783, 131073, 42, 42, 0, 43, 42, 0, 44, 42, 0, 45, 42, 0, 46, 42, 0, 47, 42, 0, 48, 42, 0, 49, 42, 0, 50, 42, 0, 51, 42, 0, 52, -1610612695, 131073, 131071, -1073741783, 131073, 65536, 42, 0, 65537, 42, 0, 65538, 42, 0, 65539, 42, 0, 65540, 42, 0, 65541, 42, 0, 65542, 42, 0, 65543, 42, 0, 65544, 42, 0, 65545, -1610612695, 131073, 65549, -1073741783, 131073, 65550, 42, 0, 65551, 42, 0, 65552, 42, 0, 65553, 42, 0, 65554, 42, 0, 65555, 42, 0, 65556, 42, 0, 65557, 42, 0, 65558, 42, 0, 65559, -1610612695, 131073, 65563, -1073741783, 131073, 65564, 42, 0, 65565, 42, 0, 65566, 42, 0, 65567, 42, 0, 65568, 42, 0, 65569, 42, 0, 65570, 42, 0, 65571, 42, 0, 65572, 42, 0, 65573, -1610612695, 131073, 65577, -1073741783, 131073, 65578, 42, 0, 65579, 42, 0, 65580, 42, 0, 65581, 42, 0, 65582, 42, 0, 65583, 42, 0, 65584, 42, 0, 65585, 42, 0, 65586, 42, 0, 65587, 42, 0, 65588, -1610612695, 131073, 196607, -1073741783, 131073, 131072, 42, 0, 131073, 42, 0, 131074, 42, 0, 131075, 42, 0, 131076, 42, 0, 131077, 42, 0, 131078, 42, 0, 131079, 42, 0, 131080, 42, 0, 131081, -1610612695, 131073, 131085, -1073741783, 131073, 131086, 42, 0, 131087, 42, 0, 131088, 42, 0, 131089, 42, 0, 131090, 42, 0, 131091, 42, 0, 131092, 42, 0, 131093, 42, 0, 131094, 42, 0, 131095, -1610612695, 131073, 131099, -1073741783, 131073, 131100, 42, 0, 131101, 42, 0, 131102, 42, 0, 131103, 42, 0, 131104, 42, 0, 131105, 42, 0, 131106, 42, 0, 131107, 42, 0, 131108, 42, 0, 131109, -1610612695, 131073, 131113, -1073741783, 131073, 131114, 42, 0, 131115, 42, 0, 131116, 42, 0, 131117, 42, 0, 131118, 42, 0, 131119, 42, 0, 131120, 42, 0, 131121, 42, 0, 131122, 42, 0, 131123, 42, 0, 131124, -1610612695, 131073, 262143, -1073741783, 131073, 196608, 42, 0, 196609, 42, 0, 196610, 42, 0, 196611, 42, 0, 196612, 42, 0, 196613, 42, 0, 196614, 42, 0, 196615, 42, 0, 196616, 42, 0, 196617, -1610612695, 131074, 196618, -1073741783, 65536, 196619, -1073741783, 65536, 196620, -1073741783, 65536, 196621, -1073741783, 131072, 196622, 42, 0, 196623, 42, 0, 196624, 42, 0, 196625, 42, 0, 196626, 42, 0, 196627, 42, 0, 196628, 42, 0, 196629, 42, 0, 196630, 42, 0, 196631, -1073741783, 0, 196632, -1610612695, 65538, 196633, -1073741783, 65536, 196634, -1073741783, 65536, 196635, -1073741783, 131072, 196636, 42, 0, 196637, 42, 0, 196638, 42, 0, 196639, 42, 0, 196640, 42, 0, 196641, 42, 0, 196642, 42, 0, 196643, 42, 0, 196644, 42, 0, 196645, -1073741783, 0, 196646, -1610612695, 65538, 196647, -1073741783, 65536, 196648, -1073741783, 65536, 196649, -1073741783, 131072, 196650, 42, 0, 196651, 42, 0, 196652, 42, 0, 196653, 42, 0, 196654, 42, 0, 196655, 42, 0, 196656, 42, 0, 196657, 42, 0, 196658, 42, 0, 196659, 42, 0, 196660, -1610612695, 131073, 327679, -1073741783, 131073, 262144, 42, 0, 262145, 42, 0, 262146, 42, 0, 262147, 42, 0, 262148, 42, 0, 262149, 42, 0, 262150, 42, 0, 262151, 42, 0, 262152, 42, 0, 262153, 1610612778, 0, 262154, 1610612778, 0, 262155, 1610612778, 0, 262156, 1610612778, 0, 262157, -1610612694, 0, 262158, 42, 0, 262159, 42, 0, 262160, 42, 0, 262161, 42, 0, 262162, 42, 0, 262163, 42, 0, 262164, 42, 0, 262165, 42, 0, 262166, 42, 0, 262167, 1610612778, 0, 262168, 1610612778, 0, 262169, 1610612778, 0, 262170, 1610612778, 0, 262171, -1610612694, 0, 262172, 42, 0, 262173, 42, 0, 262174, 42, 0, 262175, 42, 0, 262176, 42, 0, 262177, 42, 0, 262178, 42, 0, 262179, 42, 0, 262180, 42, 0, 262181, 1610612778, 0, 262182, 1610612778, 0, 262183, 1610612778, 0, 262184, 1610612778, 0, 262185, -1610612694, 0, 262186, 42, 0, 262187, 42, 0, 262188, 42, 0, 262189, 42, 0, 262190, 42, 0, 262191, 42, 0, 262192, 42, 0, 262193, 42, 0, 262194, 42, 0, 262195, 42, 0, 262196, -1610612695, 131073, 393215, -1073741783, 131073, 327680, 42, 0, 327681, 42, 0, 327682, 42, 0, 327683, 42, 0, 327684, 42, 0, 327685, 42, 0, 327686, 42, 0, 327687, 42, 0, 327688, 42, 0, 327689, -1610612695, 131072, 327690, -1610612695, 65536, 327691, -1610612695, 65536, 327692, -1610612695, 65536, 327693, -1610612695, 65536, 327694, -1610612695, 65536, 327695, -1610612695, 65536, 327696, -1610612695, 65536, 327697, -1610612695, 65536, 327698, -1610612695, 65536, 327699, -1073741783, 131074, 327700, 1610612776, 65537, 327701, 42, 0, 327702, 40, 2, 327703, -1610612695, 131072, 327704, -1610612695, 65536, 327705, -1610612695, 65536, 327706, -1610612695, 65536, 327707, -1610612695, 0, 327708, 42, 0, 327709, 42, 0, 327710, 42, 0, 327711, 42, 0, 327712, 42, 0, 327713, 42, 0, 327714, 42, 0, 327715, 42, 0, 327716, 42, 0, 327717, -1610612695, 131072, 327718, -1610612695, 65536, 327719, -1610612695, 65536, 327720, -1610612695, 65536, 327721, -1610612695, 0, 327722, 42, 0, 327723, 42, 0, 327724, 42, 0, 327725, 42, 0, 327726, 42, 0, 327727, 42, 0, 327728, 42, 0, 327729, 42, 0, 327730, 42, 0, 327731, 42, 0, 327732, -1610612695, 131073, 458751, -1073741783, 131073, 393216, 42, 0, 393217, 42, 0, 393218, 42, 0, 393219, 42, 0, 393220, 42, 0, 393221, 42, 0, 393222, 42, 0, 393223, 42, 0, 393224, 42, 0, 393225, -1610612695, 131073, 393235, -1073741783, 131073, 393236, 42, 0, 393237, 42, 0, 393238, 42, 0, 393239, -1610612695, 131073, 393243, -1073741783, 131073, 393244, 42, 0, 393245, 42, 0, 393246, 42, 0, 393247, 42, 0, 393248, 42, 0, 393249, 42, 0, 393250, 42, 0, 393251, 42, 0, 393252, 42, 0, 393253, -1610612695, 131073, 393257, -1073741783, 131073, 393258, 42, 0, 393259, 42, 0, 393260, 42, 0, 393261, 42, 0, 393262, 42, 0, 393263, 42, 0, 393264, 42, 0, 393265, 42, 0, 393266, 42, 0, 393267, 42, 0, 393268, -1610612695, 131073, 524287, -1073741783, 131073, 458752, 42, 0, 458753, 42, 0, 458754, 42, 0, 458755, 42, 0, 458756, 42, 0, 458757, 42, 0, 458758, 42, 0, 458759, 42, 0, 458760, 42, 0, 458761, -1610612695, 131073, 458771, -1073741783, 131073, 458772, 42, 0, 458773, 42, 0, 458774, 42, 0, 458775, -1610612695, 131073, 458779, -1073741783, 131073, 458780, 42, 0, 458781, 42, 0, 458782, 42, 0, 458783, 42, 0, 458784, 42, 0, 458785, 42, 0, 458786, 42, 0, 458787, 42, 0, 458788, 42, 0, 458789, -1610612695, 131073, 458793, -1073741783, 131073, 458794, 42, 0, 458795, 42, 0, 458796, 42, 0, 458797, 42, 0, 458798, 42, 0, 458799, 42, 0, 458800, 42, 0, 458801, 42, 0, 458802, 42, 0, 458803, 42, 0, 458804, -1610612695, 131073, 589823, -1073741783, 131073, 524288, 42, 0, 524289, 42, 0, 524290, 42, 0, 524291, 42, 0, 524292, 42, 0, 524293, 42, 0, 524294, 42, 0, 524295, 42, 0, 524296, 42, 0, 524297, -1610612695, 131073, 524307, -1073741783, 131073, 524308, 42, 0, 524309, 42, 0, 524310, 42, 0, 524311, -1610612695, 131073, 524315, -1073741783, 131073, 524316, 42, 0, 524317, 42, 0, 524318, 42, 0, 524319, 42, 0, 524320, 42, 0, 524321, 42, 0, 524322, 42, 0, 524323, 42, 0, 524324, 42, 0, 524325, -1610612695, 131073, 524329, -1073741783, 131073, 524330, 42, 0, 524331, 42, 0, 524332, 42, 0, 524333, 42, 0, 524334, 42, 0, 524335, 42, 0, 524336, 42, 0, 524337, 42, 0, 524338, 42, 0, 524339, 42, 0, 524340, -1610612695, 131073, 655359, -1073741783, 131073, 589824, 41, 131073, 589825, 41, 131073, 589826, 41, 131073, 589827, 41, 131073, 589828, 41, 131073, 589829, 41, 131073, 589830, 41, 131073, 589831, 41, 131073, 589832, 41, 131073, 589833, -1610612695, 131073, 589843, -1073741783, 131073, 589844, 41, 131073, 589845, 41, 131073, 589846, 41, 131073, 589847, -1610612695, 131073, 589851, -1073741783, 131073, 589852, 41, 131073, 589853, 41, 131073, 589854, 41, 131073, 589855, 41, 131073, 589856, 41, 131073, 589857, 41, 131073, 589858, 41, 131073, 589859, 41, 131073, 589860, 41, 131073, 589861, -1610612695, 131073, 589865, -1073741783, 131073, 589866, 41, 131073, 589867, 41, 131073, 589868, 41, 131073, 589869, 41, 131073, 589870, 41, 131073, 589871, 41, 131073, 589872, 41, 131073, 589873, 41, 131073, 589874, 41, 131073, 589875, 41, 131073, 589876, -1610612695, 131073 )

[node name="MurSecondeCouche" parent="." instance=ExtResource( 1 )]

[node name="Portes" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 272 )
z_index = 5

[node name="Pet" parent="." instance=ExtResource( 3 )]
position = Vector2( 176, 272 )
z_index = 5

[node name="NPC" parent="." instance=ExtResource( 5 )]
position = Vector2( 144, 16 )
text = "It's dangerous to go alone ! Take this."
img = ExtResource( 4 )

[node name="CavernDoor_King" parent="." instance=ExtResource( 6 )]
position = Vector2( 304, 144 )

[node name="Levier" parent="." instance=ExtResource( 8 )]
position = Vector2( 720, 16 )
NotActived = ExtResource( 11 )
Actived = ExtResource( 13 )

[node name="CavernDoor_Enigme1_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 688, 176 )

[node name="CavernDoor_Enginme1_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 752, 144 )

[node name="PressurePlate" parent="." instance=ExtResource( 9 )]
position = Vector2( 688, 240 )
id = 1
NotActived = ExtResource( 12 )
Actived = ExtResource( 14 )

[node name="Levier3" parent="." instance=ExtResource( 8 )]
position = Vector2( 912, 112 )
id = 3
NotActived = ExtResource( 11 )
Actived = ExtResource( 13 )

[node name="CavernDoor_Enigme2_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 1200, 144 )

[node name="PressurePlate2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1136, 176 )
id = 2
NotActived = ExtResource( 12 )
Actived = ExtResource( 14 )

[node name="LF_BAS_1" parent="." instance=ExtResource( 10 )]
position = Vector2( 1604, 209 )
interactible = false

[node name="LF_BAS_2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1540, 209 )
interactible = false

[node name="LF_BAS_3" parent="." instance=ExtResource( 10 )]
position = Vector2( 1476, 209 )
interactible = false

[node name="LF_BAS_4" parent="." instance=ExtResource( 10 )]
position = Vector2( 1412, 209 )
interactible = false

[node name="LF_HAUT_1" parent="." instance=ExtResource( 10 )]
position = Vector2( 1604, 45 )

[node name="LF_HAUT_2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1540, 45 )

[node name="LF_HAUT_3" parent="." instance=ExtResource( 10 )]
position = Vector2( 1476, 45 )

[node name="LF_HAUT_4" parent="." instance=ExtResource( 10 )]
position = Vector2( 1412, 45 )

[node name="PressurePlate3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1616, 144 )
id = 3
NotActived = ExtResource( 12 )
Actived = ExtResource( 14 )

[node name="NPC2" parent="." instance=ExtResource( 16 )]
position = Vector2( 1392, 112 )
text = "If you give a fire pepper to Sirius, he can throw fire using A"

[node name="NPC3" parent="." instance=ExtResource( 16 )]
position = Vector2( 1616, 272 )
text = "You can rotate Sirius with directional arrows"

[node name="NPC4" parent="." instance=ExtResource( 16 )]
position = Vector2( 1648, 80 )
text = "I'm the solution giver, I'm in every dungeon. Leave Sirius on the front room pressure plate, reproduce the code, then validate."
img = ExtResource( 15 )

[node name="Stairs" parent="." instance=ExtResource( 17 )]
position = Vector2( 1552, 144 )
level_string = "Scenes/Maps/DevMap.tscn"
img = ExtResource( 18 )
